# HandScanAI

./: .gitignore  README.md  package-lock.json
backend/: .env.template  .gitignore  Dockerfile  README.md  conftest.py  datasets.py  docker-compose.milvus.yml  docker-compose.yml  docker-entrypoint.sh  initial_data_pipeline.py  manage.py  pipeline_utils.py  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/ann/: README.md  milvus.py  milvus_test.py
backend/app/: lifetime.py  main.py  routes.py
backend/app/api/: README.md  graphql.py  rest.py  websocket.py
backend/app/core/: config.py
backend/app/db/: README.md  config.py  models.py
backend/app/static/: index.html
backend/app/validation/: hand_is_spread.py  spread_check.py
backend/camera_calibration/: README.md  image_operations.py  kalibrierung.py  kalibrierungswerte.txt  rectangle_operations.py
backend/classifier/: README.md  classifier_utils.py  random_forest_feature_importance.py  simple_classification.py  weighted_classification.py
backend/embeddings/: README.md  embeddings_utils.py  image_utils.py  main.py  models_utils.py
backend/hand_normalization/: README.md
backend/hand_normalization/src/: functions.py  main.py  refactor.py
backend/knn/: anntree.py  balltree.py  kdtree.py
backend/lib/mediapipe/: draw.py  recognizer.py  utils.py
backend/lib/opencv/: sharpness.py
backend/pipelines/: README.md  add_new_embeddings_pipeline.py  csv_utils.py  data_utils.py  dataloaders.py  datasets.py  distance_calculation.py  hand_regions.py  inference_pipeline.py  initial_data_pipeline.py  initial_dataset_filter_pipeline.py  pipeline_utils.py  regions_utils.py
backend/tests/: README.md
backend/tests/camera_calibration/: test_kalibrierung.py
backend/tests/camera_calibration_test/: test_kalibrierung.py  test_rectangle_operations.py
backend/tests/classifier/: test_random_forest.py  test_simple_classifier.py  test_weighted_classifier.py
backend/tests/embeddings/: conftest.py  test_embeddings_utils.py  test_image_utils.py  test_model_utils.py
backend/tests/pipelines/: conftest.py  (+7 more)
backend/utils/: README.md  csv_utils.py  image_utils.py  key_enums.py  logging_utils.py  uuid_utils.py
backend/validation/: README.md  hand_is_dorsal.py  hand_is_spread.py  hand_is_visible.py  validation_pipeline.py
backend/vectordb/: README.md  milvus.py
(+124 files in other folders)
