[project]
name = "backend"
version = "0.1.0"
description = "HandScanAI Backend"
authors = [{ name = "HSD" }]
license = { text = "MIT" }

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
lint.select = [
    "E", # https://github.com/charliermarsh/ruff#pycodestyle
    "F", # https://github.com/charliermarsh/ruff#pyflakes
    "UP", # https://github.com/charliermarsh/ruff#pyupgrade
    "N", # https://github.com/charliermarsh/ruff#pep8-naming
    "S", # https://github.com/charliermarsh/ruff#flake8-bandit
    "C", # https://github.com/charliermarsh/ruff#flake8-comprehensions
    "B", # https://github.com/charliermarsh/ruff#flake8-bugbear
    "T" # https://github.com/charliermarsh/ruff#flake8-print
]
lint.ignore = [
    "T201",
    "N802",
    "N805",
    "S101",
    "S603",
    "S607",
]

[tool.pytest.ini_options]
pythonpath = ["."]